# tct_cpp_simulation

./: .gitignore  CMakeLists.txt  NA_0p185.npy  NA_0p232.npy  README.md  config.json  main.cc
exp_data/: C_vs_V.csv  electron_drift_velocity.csv  hole_drift_velocity.csv
include/: charge_carrier.hh  charge_injection.hh  config.hh  detector.hh  utility.hh
optical_sim/: focal_point_shift.py  z_scan_2D.py  z_scan_3D.py  z_scan_3D_vectorial.py
src/: charge_carrier.cc  charge_injection.cc  config.cc  detector.cc  utility.cc
